# BitirmeProjesi

./: BitirmeProjesi.sln
IP1.1/: IP1.1.cpp  IP1.1.vcxproj  IP1.1.vcxproj.filters  Main.cpp  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PointCluster.cpp  PointCluster.h  Transform.cpp  Transform.h
IP1.1/Clouds/: cam.txt  cam2_transformed.txt
Lib_trm/: Lib_trm.vcxproj  Lib_trm.vcxproj.filters  Main.cpp  Point.cpp  PointCloud.cpp  PointCloud.h  Transform.cpp  Transform.h
Lib_trm/Clouds/: cam3.txt  cam_transformed.txt  tr_cam1.txt
OctomapTest/: CMakeLists.txt
OctomapTest/Clouds/: cam1.txt  cam2.txt  ex_tree.bt  mapped.bt  tr_cam3.txt
OctomapTest/include/: Point.h  PointCloud.h
OctomapTest/src/: Main.cpp  Transform.cpp
